# esp32-wifi-bridge

./: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
src/: bridge.rs  main.rs
